--- a/lqr_srvs/package.xml
+++ b/lqr_srvs/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>lqr_msgs</name>
+  <name>lqr_srvs</name>
   <version>1.0.0</version>
   <description>Message definitions for the rosplane package</description>
   <maintainer email="cartern2@byu.edu">Carter Noh</maintainer>
@@ -14,6 +14,8 @@
   <member_of_group>rosidl_interface_packages</member_of_group>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>rosplane_msgs</depend>
+  <depend>rosflight_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
