--- a/rosplane_lqr/package.xml
+++ b/rosplane_lqr/package.xml
@@ -16,6 +16,7 @@
   <depend>sensor_msgs</depend>
   <depend>rosplane_msgs</depend>
   <depend>rosflight_msgs</depend>
+  <depend>lqr_srvs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
